<resources>


    <string name="app_name">ManagentorApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <color name="fui_transparent">#00000000</color>
    <!--Navigation menu-->
    <string name="menu_home">Propiedades</string>
    <string name="add_property">Crear nueva propiedad</string>
    <string name="calendar">Citas</string>

    <!--Property list-->
    <string name="property_direction">Dirección</string>
    <string name="default_price">n/a</string>
    <string name="price">Precio</string>
    <string name="property_photo">property photo</string>
    <string name="default_bedroom_number">1</string>
    <string name="bedroom_text">hab.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="more_features">Otras características</string>
    <string name="property_type">Tipo de inmueble</string>
    <string name="ok">OK</string>
    <string name="basic_data">Datos Básicos</string>
    <string name="details">Detalles</string>
    <string name="photos">Fotos</string>
    <string name="address_details">Nombre y numero de calle</string>
    <string name="address_other_details">Piso, apartamento, bloque…</string>
    <string name="state">Provincia</string>
    <string name="city">Ciudad</string>
    <string name="choose_state">Elegir provincia…</string>
    <string name="choose_city">Elegir ciudad…</string>
    <string name="postal_code">Código postal</string>
    <string name="txt_postal_code">Código postal</string>
    <string name="default_number">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="bathroom">Baños</string>
    <string name="m2">m2 (reales)</string>
    <string name="state_txt">Provincia</string>
    <string name="continue_text">Continuar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="import_contact">Importar contacto</string>
    <string name="create_contact">Crear contacto en el móvil</string>
    <string name="month_price_txt">€/mes</string>
    <string name="one">1</string>
    <string name="no_data">NA</string>
    <string name="hab_txt">Hab.</string>
    <string name="bathroom_txt">Baños</string>
    <string name="square_meters_txt">m2</string>
    <string name="real_square_meters_txt">m2(real)</string>
    <string name="elevator_txt">Ascensor</string>
    <string name="garage">Garage</string>
    <string name="date_txt">Fecha:</string>
    <string name="hour_txt">Hora:</string>
    <string name="visit_date_txt">Visita del piso</string>
    <string name="create_event_button_txt">Crear evento</string>
    <string name="reason_txt">Motivo:</string>
    <string name="zipcode_txt">Código postal</string>
    <string name="bedroom_txt_long">Habitaciones</string>
    <string name="deposit_number">Nº fianzas</string>
    <string name="aditional_comments">Comentarios adicionales</string>
    <string name="owner">Propietario</string>
    <string name="interested_people">Personas interesadas</string>
    <string name="furnished_txt">Equipamiento</string>
    <string name="address">Dirección</string>
    <string name="edit_photos">Editar fotos</string>
    <string name="edit">Editar propiedad</string>
    <string name="euros_month">€/mes</string>
    <string name="phone">Teléfono: </string>
    <string name="create_contact_from_phone">Crear contacto en el teléfono</string>
    <string name="name">Nombre:</string>
    <string name="save">Guardar</string>
    <string name="profile">Perfil</string>
    <string name="logout">Salir</string>
    <string name="button_details">Ver detalles</string>
    <string name="empresa">Empresa</string>
    <string-array name="property_types">
        <item>Piso</item>
        <item>Casa</item>
        <item>Habitación</item>
    </string-array>

    <string-array name="property_types_state">
        <item>Alquilado</item>
        <item>No alquilado</item>
    </string-array>



    <string-array name="property_types_filter">
        <item>Cualquiera</item>
        <item>Piso</item>
        <item>Casa</item>
        <item>Habitación</item>
    </string-array>
    <string-array name="equipment">
        <item>Amueblado</item>
        <item>Sin amueblar</item>
        <item>Cocina equipada</item>
    </string-array>


</resources>