<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
            <!--android:onClick="goLstProp"-->

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/calendar" />


        <item
            android:id="@+id/nav_rent_history"
            android:icon="@drawable/baseline_history_24"
            android:title="Alquilados" />

        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
            <!--android:onClick="logOut"-->

    </group>

</menu>
