<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/toolbar4" />
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/address_edit"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:gravity="center_horizontal"
            android:textAppearance="@style/body_light" />

        <EditText
            android:id="@+id/city_edit"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:paddingTop="10dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/body_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textAppearance="@style/body_bold" />

            <EditText
                android:id="@+id/state_edit"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/body_light"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zipcode_txt"
                android:gravity="center_horizontal"
                android:textAppearance="@style/body_bold" />

            <EditText
                android:id="@+id/zipcode_edit"
                android:inputType="none"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/body_light"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_square_meters_txt"
                android:textAppearance="@style/body_bold" />

            <EditText
                android:id="@+id/square_meters_edit"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="@style/body_light"
                android:layout_marginStart="10dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros_month"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/body_bold" />


            <EditText
                android:id="@+id/price_edit"
                android:inputType="none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginStart="10dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/body_light"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Tipo"
                android:textAppearance="@style/body_bold" />

            <Spinner
                android:id="@+id/spinner_furnished_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="2" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/bedroom_txt_long"
                android:textAppearance="@style/body_bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">

                <Button
                    android:id="@+id/btn_less_bedroom"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/bedroom_edit"
                    android:layout_width="wrap_content"
                    android:minWidth="40dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:text="@string/default_number" />

                <Button
                    android:id="@+id/btn_plus_bedroom"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:text="@string/plus" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/bathroom_txt"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/body_bold"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_less_bathroom"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/bathroom_edit"
                    android:layout_width="wrap_content"
                    android:minWidth="40dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:text="@string/default_number" />

                <Button
                    android:id="@+id/btn_plus_bathroom"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:text="@string/plus" />
            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="2">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:src="@drawable/lift_icon"
                android:layout_gravity="center_vertical"
                android:baselineAlignBottom="@id/bathroom_number" />

            <TextView
                android:id="@+id/elevator_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/elevator_txt"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/body_bold"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/elevator_toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textOff="@string/no"
                android:textOn="@string/yes" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aditional_comments"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textAppearance="@style/h1" />

        <EditText
            android:id="@+id/aditional_comments_edit"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/body_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:baselineAligned="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/h1" />

            <EditText
                android:id="@+id/client_name_edit"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:hint="Nombre"
                android:textAppearance="@style/body_light"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/client_phone_edit"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:hint="Teléfono"
                android:textAppearance="@style/body_light" />




        </LinearLayout>

        <Button
            android:id="@+id/save_property"
            android:letterSpacing="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:focusable="true"
            android:textAllCaps="false"
            android:backgroundTint="@color/azul"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
</FrameLayout>