<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


    <TextView
            android:id="@+id/visit_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/date_txt" />

    <EditText
            android:id="@+id/visit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/visit_date_txt"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date" />

    <TextView
            android:id="@+id/visit_hour_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@+id/visit_date_txt"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hour_txt" />

    <EditText
            android:id="@+id/visit_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/visit_hour_txt"
            android:layout_below="@id/visit_date_txt"
            android:gravity="center_horizontal"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:inputType="time" />

    <TextView
            android:id="@+id/reason_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@+id/visit_hour_txt"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:text="@string/reason_txt" />

    <EditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/reason_txt"
            android:layout_below="@id/visit_hour_txt"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"
            android:hint="@string/visit_date_txt" />

    <Button
            android:id="@+id/create_visit"
            android:layout_below="@+id/reason"
            android:letterSpacing="0"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:focusable="true"
            android:textAllCaps="false"
            android:background="@color/black"
            android:text="@string/create_event_button_txt" />

</RelativeLayout>